--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,3 +1,57 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::selection {
+    @apply bg-accent text-secondary;
+}
+
+.bg-login {
+    position: relative;
+    width: 100%;
+
+    background: #01449c;
+}
+
+.bg-hero {
+    background-image: url('/../../bg-hero.jpg');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
+}
+
+.bg-gradient {
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0), black);
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+    width: 50px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background:
+        radial-gradient(farthest-side, #ffa516 94%, #0000) top/8px 8px no-repeat,
+        conic-gradient(#0000 30%, #ffa516);
+    -webkit-mask: radial-gradient(
+        farthest-side,
+        #0000 calc(100% - 8px),
+        #000 0
+    );
+    animation: l13 1s infinite linear;
+}
+
+.humberger-line {
+    @apply block h-[2px] w-[18px] rounded-sm bg-accent;
+}
+
+.center-element {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes l13 {
+    100% {
+        transform: rotate(1turn);
+    }
+}
